--- a/index.htm
+++ b/index.htm
@@ -180,7 +180,7 @@
                <p>Live for influential and innovative fashion!</p>
                <button>Shop Now</button>
            </div>
-           <div><img src="../stevo/happy.png" alt="a girl"></div> <!--right-->
+           <div><img src="media/happy.png" alt="a girl"></div> <!--right-->
        </div>
 
        <div class="row-two"> <!--row two-->
