--- a/index.htm
+++ b/index.htm
@@ -184,29 +184,29 @@
        </div>
 
        <div class="row-two"> <!--row two-->
-           <img src="../stevo/Brands.png" alt="brand image">
+           <img src="media/Brands.png" alt="brand image">
        </div>
 
        <div class="row-three" style="padding-bottom: 70px;"> <!--row three-->
            <h3 style="display: inline-block;">NEW ARRIVALS</h3>
            <div class="image-card-three">
                <div>
-                   <img style="background: #b9b9bb;" src="../stevo/Rectangle_20-removebg-preview.png" alt="">
+                   <img style="background: #b9b9bb;" src="media/Rectangle_20-removebg-preview.png" alt="">
                    <br><br><b>Hoodies & Sweetshirts</b><br><small>Explore Now!</small>
                </div>
                <div>
-                   <img style="background: #7e629d;" src="../stevo/Rectangle_21-removebg-preview.png" alt="">
+                   <img style="background: #7e629d;" src="media/Rectangle_21-removebg-preview.png" alt="">
                    <br><br><b>Coats & Parkas</b><br><small>Explore Now!</small>
                </div>
                <div>
-                   <img style="background: #68c8c7" src="../stevo/Rectangle_22-removebg-preview.png" alt="">
+                   <img style="background: #68c8c7" src="media/Rectangle_22-removebg-preview.png" alt="">
                    <br><br><b>Tees & T-Shirts</b><br><small>Explore Now!</small>
                </div>
            </div>
        </div>
 
        <div class="row-four" style="background: #ebd96b">  <!--row four-->
-           <div><img src="../stevo/image_12-removebg-preview.png" alt=""></div>
+           <div><img src="media/image_12-removebg-preview.png" alt=""></div>
            <div style="margin: 40px 0 0 60px;">
                <div class="unique" style="background: white; margin-left: -10px; padding-right: 10px;"><h1>PAYDAY</h1></div>
                <h1>SALE NOW</h1>
@@ -221,7 +221,7 @@
            <div class="image-card-five">
                <div class="column1">
                    <div>
-                       <img style="background: #e9c7ae; border: 1px; border-radius: 5px;" src="../stevo/Rectangle_50-removebg-preview.png" alt="">
+                       <img style="background: #e9c7ae; border: 1px; border-radius: 5px;" src="media/Rectangle_50-removebg-preview.png" alt="">
                        <br><br><b>Trending on instagram</b><br><small>Explore Now!</small>
                    </div>
                     <div style="margin: 150px 20px;">
@@ -233,11 +233,11 @@
                </div>
                <div class="column2">
                    <div>
-                       <img style="background: #e5b3ab; border: 1px; border-radius: 5px;" src="../stevo/Rectangle_49-removebg-preview.png" alt="">
+                       <img style="background: #e5b3ab; border: 1px; border-radius: 5px;" src="media/Rectangle_49-removebg-preview.png" alt="">
                        <br><br><b>All under $40</b><br><small>Explore Now!</small>
                    </div>
                    <div>
-                       <img src="../stevo/mobile.png" alt="" />
+                       <img src="media/mobile.png" alt="" />
                    </div>
                </div>
            </div>
