--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-  <title>Untitled</title>
+  <title>FASHION</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/34090bf3d6.js" crossorigin="anonymous"></script>
   <style>
          body{ box-sizing: border-box;
