--- a/index.htm
+++ b/index.htm
@@ -177,6 +177,13 @@
               background: #b9b9bb;
           }
 
+         @media (max-width: 450px) {
+           .nav-bar{
+               width: device-width;
+           }
+
+         }
+
 
 
   </style>
